packages/svelte/tests/compiler-errors/samples/unexpected-end-of-input-b/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'unexpected_eof',
		message: 'Unexpected end of input',
		position: [2, 2]
	}
});
